[tool.poetry]
name = "test_heroku_app"
version = "0.1.0"
description = ""
authors = ["pranav93 <ambhore.pranav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
fastapi = "^0.68.1"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
